# tool-create-release

./: .gitignore  CHANGELOG.md  README.md  get_next_version.py  metadata.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: create-new-tag.yaml  create-release-pr.yaml  internal-alias.yaml  internal-finalize.yaml  internal-prepare.yaml  pytest.yaml  static-analysis.yml  wf-alias-release.yaml  wf-finalize-release.yaml  wf-prepare-release.yaml
bumpchanges/: __init__.py  alias.py  bump.py  changelog.py  finalize.py  getversion.py  logging.py  updatefiles.py  utils.py
scripts/: create-tag.js  finalize-release.js
templates/: alias-release.yaml  finalize-release.yaml  prepare-release-non-semantic-version.yaml  prepare-release.yaml
tests/: conftest.py  test_aliases.py  test_bumpchanges.py  test_finalizing.py  test_formatting.py  test_versionfiles.py
tests/resources/: 2.5.3.md  changelogs.json  formatted.md  original.md
